- implemented user-based responses
